--- a/Desktop/Expense Tracker /backend/package.json
+++ b/Desktop/Expense Tracker /backend/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.1"
+    "mongoose": "^9.1.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
