--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
+MONGO_URI=mongodb+srv://f2023664_db_user:3hEy74gU2l2BWL2J@expensetracker1.oirhtqo.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/expenseTracker
