--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://f2023664_db_user:3hEy74gU2l2BWL2J@expensetracker1.oirhtqo.mongodb.net/?retryWrites=true&w=majority
-PORT=5000
+MONGO_URI=mongodb+srv://f2023664_db_user:YtKQT5RMAVZihf9p@cluster123.lgavi9o.mongodb.net/expenseDB?retryWrites=true&w=majority
+PORT=5003
